fix: change broken UploadButton text align

--- a/src/components/Content/UploadContent/UploadContent.css
+++ b/src/components/Content/UploadContent/UploadContent.css
@@ -26,6 +26,7 @@
     top: 0;
     overflow: hidden;
     width: 160px;
+    text-align: left;
 }
 
 input {
